stitch/src/snapshots/stitch__parser__tests__parses_expr_body_function.snap
---
source: stitch/src/parser.rs
expression: "prog(\"double(x) = x * 2\")"
---
[
    Func {
        name: "double",
        params: [
            Param {
                name: "x",
                ty: None,
            },
        ],
        ret: None,
        body: Binary {
            op: Mul,
            left: Var(
                "x",
            ),
            right: Int(
                2,
            ),
        },
    },
]
