stitch/src/snapshots/stitch__parser__tests__parses_function_among_type_declarations.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod P(x: Int)  area(p) = p.x * 2\")"
---
[
    Prod {
        name: "P",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "x",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
    Func {
        name: "area",
        params: [
            Param {
                name: "p",
                ty: None,
            },
        ],
        ret: None,
        body: Binary {
            op: Mul,
            left: Field {
                object: Var(
                    "p",
                ),
                name: "x",
            },
            right: Int(
                2,
            ),
        },
        public: false,
    },
]
