stitch/src/snapshots/stitch__parser__tests__parses_function_with_return_type.snap
---
source: stitch/src/parser.rs
expression: "prog(\"fetch(url: Str) -> Response = get(url)\")"
---
[
    Func {
        name: "fetch",
        params: [
            Param {
                name: "url",
                ty: Some(
                    Name {
                        name: "Str",
                        args: [],
                    },
                ),
            },
        ],
        ret: Some(
            Name {
                name: "Response",
                args: [],
            },
        ),
        body: Call {
            callee: Var(
                "get",
            ),
            args: [
                Arg {
                    label: None,
                    value: Var(
                        "url",
                    ),
                },
            ],
        },
        public: false,
    },
]
