stitch/src/snapshots/stitch__parser__tests__parses_generic_sum_positional_and_nullary.snap
---
source: stitch/src/parser.rs
expression: "prog(\"sum Maybe<T> = Some(T) | None\")"
---
[
    Sum {
        name: "Maybe",
        generics: [
            "T",
        ],
        variants: [
            Variant {
                name: "Some",
                fields: [
                    Field {
                        name: None,
                        mutable: false,
                        ty: Name {
                            name: "T",
                            args: [],
                        },
                    },
                ],
            },
            Variant {
                name: "None",
                fields: [],
            },
        ],
        public: false,
    },
]
