stitch/src/snapshots/stitch__parser__tests__parses_ignore_param_lambda.snap
---
source: stitch/src/parser.rs
expression: "p(\"_ -> 0\")"
---
Lambda {
    params: [
        "_",
    ],
    body: Int(
        0,
    ),
}
