stitch/src/snapshots/stitch__parser__tests__parses_inclusive_range.snap
---
source: stitch/src/parser.rs
expression: "p(\"0..=n\")"
---
Range {
    start: Some(
        Int(
            0,
        ),
    ),
    end: Some(
        Var(
            "n",
        ),
    ),
    inclusive: true,
}
