stitch/src/snapshots/stitch__parser__tests__parses_inclusive_range_to.snap
---
source: stitch/src/parser.rs
expression: "p(\"..=n\")"
---
Range {
    start: None,
    end: Some(
        Var(
            "n",
        ),
    ),
    inclusive: true,
}
