stitch/src/snapshots/stitch__parser__tests__parses_index.snap
---
source: stitch/src/parser.rs
expression: "parse(\"xs[0]\")"
---
Index {
    object: Var(
        "xs",
    ),
    index: Int(
        0,
    ),
}
